--- a/content/quick-from.mdx
+++ b/content/quick-from.mdx
@@ -1,15 +1,13 @@
 ---
-title: "Quick from"
-summary: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+title: "Overview"
+summary: "An overview of the Random Bookmark Chrome extension."
 topic: {
   name: "Welcome",
   slug: "welcome"
 }
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis enim lobortis scelerisque fermentum. Neque sodales ut etiam sit amet how to manage anything malesuada proin libero nunc consequat interdum varius. Quam pellentesque nec nam aliquam sem et tortor consequat. Pellentesque adipiscing commodo elit at imperdiet.
-
-Semper auctor neque vitae tempus quam pellentesque nec. Amet dictum sit amet justo donec enim diam. Varius sit amet mattis vulputate enim nulla aliquet porttitor. Odio pellentesque diam volutpat commodo sed. Elit sed vulputate mi sit amet mauris commodo quis imperdiet.
+The Random Bookmark Homepage is a Chrome extension that enhances your browsing experience by setting a random bookmark as your homepage each day. Every time you open Chrome, you'll be greeted with a different page from your bookmarks, helping you rediscover saved content and adding an element of surprise to your daily browsing routine.
 
 ### Sending money to bank account
 
