--- a/content/docs/contributing.mdx
+++ b/content/docs/contributing.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Contributing"
 summary: "Contributing to the Random Bookmark Chrome extension."
-topicTitle: "Sending money"
-topicSlug: "Sending money"
+topicTitle: "useage"
+topicSlug: "useage"
 ---
 
 Contributions to improve the Random Bookmark Homepage extension are welcome. Please feel free to submit issues or pull requests.
