--- a/content/docs/files.mdx
+++ b/content/docs/files.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Files"
 summary: "Files of the Random Bookmark Chrome extension."
-topicTitle: "Sending money"
-topicSlug: "sending-money"
+topicTitle: "useage"
+topicSlug: "useage"
 ---
 
 - `manifest.json`: Defines the extension's properties and required permissions.
