--- a/content/docs/useage.mdx
+++ b/content/docs/useage.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Useage"
 summary: "Usage of the Random Bookmark Chrome extension."
-topicTitle: "Sending money"
-topicSlug: "sending-money"
+topicTitle: "useage"
+topicSlug: "useage"
 ---
 
 Once installed, the extension works automatically:
