--- a/content/docs/permissions.mdx
+++ b/content/docs/permissions.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Permissions"
 summary: "Permissions of the Random Bookmark Chrome extension."
-topicTitle: "Sending money"
-topicSlug: "sending-money"
+topicTitle: "useage"
+topicSlug: "useage"
 ---
 
 This extension requires the following permissions:
